feat: Add token retrieval
